--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<script src="https://kit.fontawesome.com/9a1b721ce7.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -23,6 +24,11 @@
 		<img class="arrow_right" src="./assets/images/arrow_right.png" alt="arrow_right">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
 		<div class="dots">
+			<div class="dot"></div>
+			<div class="dot"></div>
+			<div class="dot"></div>
+			<div class="dot"></div>
+			
 		</div>
 	</div>
 	<section id="about-us" class="container">
